[gd_scene load_steps=6 format=3 uid="uid://cclyfheec18gf"]

[ext_resource type="Texture2D" uid="uid://bikyfrpam6krp" path="res://assets/Images/MeshiverseBackground.png" id="1_5p8wc"]
[ext_resource type="Theme" uid="uid://4xxu83ohm4g" path="res://themes/primary.tres" id="1_6wm04"]
[ext_resource type="Script" uid="uid://boc1kao7dicvm" path="res://scripts/settings.gd" id="1_r6d6q"]
[ext_resource type="Script" uid="uid://8hn5218c2ag0" path="res://scripts/model_record.gd" id="4_f4mfi"]

[sub_resource type="SystemFont" id="SystemFont_5p8wc"]
font_names = PackedStringArray("Verdana")

[node name="Settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_6wm04")
script = ExtResource("1_r6d6q")

[node name="SettingWallpaper" type="TextureRect" parent="."]
modulate = Color(0.28668356, 0.2866836, 0.28668356, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_5p8wc")
expand_mode = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="OpenSelector" type="FileDialog" parent="MarginContainer"]
oversampling_override = 1.0
title = "Open a File"
position = Vector2i(0, 36)
dialog_hide_on_ok = true
file_mode = 0
display_mode = 1
access = 2
root_subfolder = "user://"
use_native_dialog = true
folder_creation_enabled = false

[node name="NewSelector" type="FileDialog" parent="MarginContainer"]
oversampling_override = 1.0
title = "Open a Directory"
initial_position = 2
size = Vector2i(640, 640)
ok_button_text = "Select"
dialog_hide_on_ok = true
file_mode = 2
display_mode = 1
access = 2
root_subfolder = "user://"
show_hidden_files = true
use_native_dialog = true

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Seperator" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="MainTitle" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 11
theme_override_constants/outline_size = 12
theme_override_fonts/font = SubResource("SystemFont_5p8wc")
theme_override_font_sizes/font_size = 72
text = "Meshiverse"
vertical_alignment = 1

[node name="Seperator2" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="New" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 24
text = "New Library"

[node name="Open" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
theme_override_font_sizes/font_size = 24
text = "Open Library"

[node name="Seperator3" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Seperator5" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Seperator4" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Seperator6" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="DisplayDirectory" type="LineEdit" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Meshiverse Directory Location"
editable = false

[node name="ModelRecord" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
script = ExtResource("4_f4mfi")
metadata/_custom_type_script = "uid://8hn5218c2ag0"

[node name="ModelRecord2" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
script = ExtResource("4_f4mfi")
metadata/_custom_type_script = "uid://8hn5218c2ag0"

[node name="ModelRecord3" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
script = ExtResource("4_f4mfi")
metadata/_custom_type_script = "uid://8hn5218c2ag0"

[node name="ModelRecord4" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
script = ExtResource("4_f4mfi")
metadata/_custom_type_script = "uid://8hn5218c2ag0"

[node name="ModelRecord5" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
script = ExtResource("4_f4mfi")
metadata/_custom_type_script = "uid://8hn5218c2ag0"

[node name="ModelRecord6" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
script = ExtResource("4_f4mfi")
metadata/_custom_type_script = "uid://8hn5218c2ag0"

[node name="ModelRecord7" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
script = ExtResource("4_f4mfi")
metadata/_custom_type_script = "uid://8hn5218c2ag0"

[connection signal="file_selected" from="MarginContainer/OpenSelector" to="." method="_on_open_selector_file_selected"]
[connection signal="dir_selected" from="MarginContainer/NewSelector" to="." method="_on_directory_selector_dir_selected"]
[connection signal="button_down" from="MarginContainer/VBoxContainer/HBoxContainer/New" to="." method="_on_select_directory_button_down"]
[connection signal="button_down" from="MarginContainer/VBoxContainer/HBoxContainer/Open" to="." method="_on_open_button_down"]
